modified manifest 3 and 4

--- a/manifestFour/pipeline.yaml
+++ b/manifestFour/pipeline.yaml
@@ -19,7 +19,7 @@ steps:
 - name: deploy_to_int
   application_path: testapp_int.yml
   tests:
-  - path: verifyendpoints.sh
+  - path: verifyendpoint.sh
     type: inject
     image: curlimages/curl:latest
     commands: [sh, -c, ./verifyendpoints.sh]
