--- a/manifestThree/pipeline.yaml
+++ b/manifestThree/pipeline.yaml
@@ -16,6 +16,13 @@ steps:
     before: false
     variables:
       SERVICE_INTERNAL_URL: testapp.dev.svc.cluster.local
+  - path: verifyendpoints.sh
+    type: inject
+    image: curlimages/curl:latest
+    commands: [sh, -c, ./verifyendpoints.sh]
+    before: true
+    variables:
+      SERVICE_INTERNAL_URL: testapp.dev.svc.cluster.local
 - name: deploy_to_int
   application_path: testapp_int.yml
   tests:
@@ -26,6 +33,3 @@ steps:
     before: false
     variables:
       SERVICE_INTERNAL_URL: testapp.int.svc.cluster.local
-  #The schema is DAG based, allowing both linear and complex pipelines
-  dependencies:
-  - deploy_to_dev
