--- a/manifestFive/pipeline.yaml
+++ b/manifestFive/pipeline.yaml
@@ -1,4 +1,4 @@
-name: demo_pipeline
+name: demo_pipeline_5
 argo_version_lock: true
 #cluster_name at the pipeline level means that every step in the pipeline will deploy to cluster_local.
 #If cluster_name is also defined at a particular step, it will override the cluster_name set at the pipeline
@@ -29,3 +29,37 @@ steps:
   #The schema is DAG based, allowing both linear and complex pipelines
   dependencies:
   - deploy_to_dev
+- name: deploy_to_saif
+  #This is the path of the ArgoCD Application file
+  application_path: testapp_dev.yml
+  tests:
+  - path: verifyendpoints.sh
+    type: inject
+    image: curlimages/curl:latest
+    commands: [sh, -c, ./verifyendpoints.sh]
+    before: true
+    variables:
+      SERVICE_INTERNAL_URL: testapp.dev.svc.cluster.local
+  - path: verifyendpoints.sh
+    type: inject
+    image: curlimages/curl:latest
+    commands: [sh, -c, ./verifyendpoints.sh]
+    before: false
+    variables:
+      SERVICE_INTERNAL_URL: testapp.dev.svc.cluster.local
+  dependencies:
+  - deploy_to_dev
+- name: deploy_to_stage
+  #This is the path of the ArgoCD Application file
+  application_path: testapp_dev.yml
+  tests:
+  - path: verifyendpoints.sh
+    type: inject
+    image: curlimages/curl:latest
+    commands: [sh, -c, ./verifyendpoints.sh]
+    before: true
+    variables:
+      SERVICE_INTERNAL_URL: testapp.dev.svc.cluster.local
+  dependencies:
+  - deploy_to_int
+  - deploy_to_saif
