--- a/manifestFour/pipeline.yaml
+++ b/manifestFour/pipeline.yaml
@@ -1,4 +1,4 @@
-name: demo_pipeline
+name: demo_pipeline_4
 argo_version_lock: true
 #cluster_name at the pipeline level means that every step in the pipeline will deploy to cluster_local.
 #If cluster_name is also defined at a particular step, it will override the cluster_name set at the pipeline
@@ -19,7 +19,7 @@ steps:
 - name: deploy_to_int
   application_path: testapp_int.yml
   tests:
-  - path: verifyendpoint.sh
+  - path: verifyendpoint.sh # should through error
     type: inject
     image: curlimages/curl:latest
     commands: [sh, -c, ./verifyendpoints.sh]
