--- a/manifestSix/argo_manifest/manifest.yml
+++ b/manifestSix/argo_manifest/manifest.yml
@@ -16,7 +16,7 @@ spec:
       containers:
       - image: 
         name: testapp
-        imagePullPolicy: Always
+        imagePullPolicy: Alwa
         ports:
         - containerPort: 5000
 ---
