--- a/manifestSeven/testapp_int.yml
+++ b/manifestSeven/testapp_int.yml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/GreenOpsInc/atlasexamples.git
     targetRevision: main
-    path: basic/argo_manifest
+    path: basic/argo_manifes # error
   destination:
     server: https://kubernetes.default.svc
     namespace: int
