--- a/manifestTen/pipeline.yaml
+++ b/manifestTen/pipeline.yaml
@@ -1,9 +1,13 @@
-# there is a syntax error in verifyendpoints.sh
-name: demo_pipeline_7
+# no deployment, only tasks
+name: demo_pipeline_10
 argo_version_lock: true
+#cluster_name at the pipeline level means that every step in the pipeline will deploy to cluster_local.
+#If cluster_name is also defined at a particular step, it will override the cluster_name set at the pipeline
+#(only for that step).
 cluster_name: in-cluster
 steps:
 - name: deploy_to_dev
+  #This is the path of the ArgoCD Application file
   application_path: testapp_dev.yml
   tests:
   - path: verifyendpoints.sh
@@ -11,8 +15,6 @@ steps:
     image: curlimages/curl:latest
     commands: [sh, -c, ./verifyendpoints.sh]
     before: false
-    variables:
-      SERVICE_INTERNAL_URL: testapp.dev.svc.cluster.local
 - name: deploy_to_int
   application_path: testapp_int.yml
   tests:
@@ -21,7 +23,6 @@ steps:
     image: curlimages/curl:latest
     commands: [sh, -c, ./verifyendpoints.sh]
     before: false
-    variables:
-      SERVICE_INTERNAL_URL: testapp.int.svc.cluster.local
+  #The schema is DAG based, allowing both linear and complex pipelines
   dependencies:
   - deploy_to_dev
