--- a/manifestEight/pipeline.yaml
+++ b/manifestEight/pipeline.yaml
@@ -1,4 +1,5 @@
 # this one have incorrect dependencies name and missing cluster_name
+# in this case, events of deploy_to_int will not receive
 name: demo_pipeline_8
 argo_version_lock: true
 cluster_name: in-cluster
