--- a/manifestEleven/pipeline.yaml
+++ b/manifestEleven/pipeline.yaml
@@ -1,4 +1,4 @@
-# here, rollback_limit = 0
+# here, rollback_limit = 0 and syntax error in verifyendpoints.sh
 name: demo_pipeline_11
 argo_version_lock: true
 cluster_name: in-cluster
@@ -6,9 +6,9 @@ steps:
 - name: deploy_to_dev
   #This is the path of the ArgoCD Application file
   application_path: testapp_dev.yml
+  rollback_limit: 1
   tests:
   - path: verifyendpoints.sh
-    rollback_limit: 1
     type: inject
     image: curlimages/curl:latest
     commands: [sh, -c, ./verifyendpoints.sh]
