--- a/clientCompletionFailed/pipeline.yaml
+++ b/clientCompletionFailed/pipeline.yaml
@@ -1,21 +1,11 @@
-name: demo_pipeline_3
+# this will fail at ClientCompletionEvent, there is an error at argo_manifest/manifest.yaml
+name: demo_pipeline_6
 argo_version_lock: true
-#cluster_name at the pipeline level means that every step in the pipeline will deploy to cluster_local.
-#If cluster_name is also defined at a particular step, it will override the cluster_name set at the pipeline
-#(only for that step).
 cluster_name: in-cluster
 steps:
 - name: deploy_to_dev
-  #This is the path of the ArgoCD Application file
   application_path: testapp_dev.yml
   tests:
-  - path: verifyendpoints.sh
-    type: inject
-    image: curlimages/curl:latest
-    commands: [sh, -c, ./verifyendpoints.sh]
-    before: true
-    variables:
-      SERVICE_INTERNAL_URL: testapp.dev.svc.cluster.local
   - path: verifyendpoints.sh
     type: inject
     image: curlimages/curl:latest
@@ -33,3 +23,5 @@ steps:
     before: false
     variables:
       SERVICE_INTERNAL_URL: testapp.int.svc.cluster.local
+  dependencies:
+  - deploy_to_dev
