--- a/humanError/pipeline.yaml
+++ b/humanError/pipeline.yaml
@@ -1,9 +1,10 @@
-# this will fail at ClientCompletionEvent
-name: demo_pipeline_6
+# human error at line 20. verifyendpoints.sh => verifyendpoint.sh
+name: demo_pipeline_4
 argo_version_lock: true
 cluster_name: in-cluster
 steps:
 - name: deploy_to_dev
+  #This is the path of the ArgoCD Application file
   application_path: testapp_dev.yml
   tests:
   - path: verifyendpoints.sh
@@ -16,12 +17,13 @@ steps:
 - name: deploy_to_int
   application_path: testapp_int.yml
   tests:
-  - path: verifyendpoints.sh
+  - path: verifyendpoint.sh # should through error
     type: inject
     image: curlimages/curl:latest
     commands: [sh, -c, ./verifyendpoints.sh]
     before: false
     variables:
       SERVICE_INTERNAL_URL: testapp.int.svc.cluster.local
+  #The schema is DAG based, allowing both linear and complex pipelines
   dependencies:
   - deploy_to_dev
