--- a/parallelSteps/pipeline.yaml
+++ b/parallelSteps/pipeline.yaml
@@ -1,8 +1,6 @@
-name: demo_pipeline_1
+# the below two steps will run parallely
+name: demo_pipeline_2
 argo_version_lock: true
-#cluster_name at the pipeline level means that every step in the pipeline will deploy to cluster_local.
-#If cluster_name is also defined at a particular step, it will override the cluster_name set at the pipeline
-#(only for that step).
 cluster_name: in-cluster
 steps:
 - name: deploy_to_dev
@@ -26,6 +24,3 @@ steps:
     before: false
     variables:
       SERVICE_INTERNAL_URL: testapp.int.svc.cluster.local
-  #The schema is DAG based, allowing both linear and complex pipelines
-  dependencies:
-  - deploy_to_dev
