--- a/withRollbacksType2/failedWithRollbacks/testapp_int.yml
+++ b/withRollbacksType2/failedWithRollbacks/testapp_int.yml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: atlastestapp-dev
+  name: atlastestapp-int
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/Saifu0/verificationpipelinetests.git
     targetRevision: main
-    path: complexPipelineWith4Steps/argo_manifest
+    path: withRollbacks/argo_manifest
   destination:
     server: https://kubernetes.default.svc
-    namespace: dev
+    namespace: int
