--- a/withRollbacksType2/source/pipeline.yaml
+++ b/withRollbacksType2/source/pipeline.yaml
@@ -1,4 +1,4 @@
-# here, just a syntax error in verifyendpoints.sh, no rollbacks
+# here,  a syntax error in verifyendpoints.sh, and rollback_limit=1
 name: demo_pipeline_11
 argo_version_lock: true
 cluster_name: in-cluster
@@ -6,6 +6,7 @@ steps:
 - name: deploy_to_dev
   #This is the path of the ArgoCD Application file
   application_path: testapp_dev.yml
+  rollback_limit: 1
   tests:
   - path: verifyendpoints.sh
     type: inject
